--- a/QLTT/QLTT/Views/Shared/_Layout.cshtml
+++ b/QLTT/QLTT/Views/Shared/_Layout.cshtml
@@ -91,13 +91,12 @@
                             <li class="has-dropdown">
                                 <a href="#">Giới Thiệu</a>
                                 <ul class="dropdown">
-                                    <li><a class="nav-link" href="@Url.Action("Ads", "Account")" style="width:240px"> Trung tâm thể thao</a></li>
+                                    <li><a class="nav-link" href="@Url.Action("Ads", "Account")"> Trung tâm thể thao</a></li>
 
                                     <li class="has-dropdown">
                                         <a class="nav-link" href="@Url.Action("Csvc", "Account")" style="width:240px"> Cơ sở vật chất</a>
                                         
                                     </li>
-
 
                                 </ul>
                             </li>
