--- a/QLTT/QLTT/Views/Home/Index.cshtml
+++ b/QLTT/QLTT/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿﻿@{
+﻿@{
     ViewBag.Title = "Trang Chủ ";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -14,15 +14,12 @@
             <span class="intro-text-small">Giới thiệu chung</span>
             <h1 class="cursive-font">Trung tâm thể dục thể thao HUFLIT</h1>
             <h3 class="cursive-font">Chào mừng bạn đến với Trung tâm Thể dục Thể thao HUFLIT, nơi cung cấp một môi trường luyện tập chuyên nghiệp, hiện đại và thân thiện. Trung tâm Thể dục Thể thao HUFLIT là cộng đồng thể thao sôi động, nơi mọi người có thể gặp gỡ, kết nối và chia sẻ niềm đam mê với thể thao. Hãy đến với chúng tôi để trải nghiệm một phong cách sống khỏe mạnh và tích cực hơn. Chúng tôi rất mong được chào đón bạn!</h3>
-
             </div>
             </div>
-            </div >
-
-            </style>
+            </div>
         </div>
     </div>
-    </div>
+
 </header>
 <div class="gtco-section">
     <div class="gtco-container">
@@ -140,8 +137,6 @@
         animation: slide-in 1s linear;
     }
 
-    }
-    }
 </style>
 
 <div id="chatContainer" class="chat-container">
@@ -165,7 +160,7 @@
                     <i class="fa fa-envelope-o" aria-hidden="true"></i>
                     @item.noi_dung
                     <br />
-                    @item.danh_gia<a>&#10030;</a>
+                    @item.danh_gia<span>&#10030;</span>
                 </div>
             </a>
         </div>
@@ -173,8 +168,7 @@
 </div>
 
 
-</body>
-</html>
+
 <div class="gtco-cover gtco-cover-sm" style="background-color: #469eb8" data-stellar-background-ratio="0.5">
     <div class="overlay"></div>
     <div class="gtco-container text-center">
@@ -187,10 +181,6 @@
     </div>
 </div>
 
-
-    </div >
-    </div >
-    </div >
 <script>
     function checkday() {
         var from1 = $("#datestart").val().split("/");
