--- a/QLTT/QLTT/Areas/Admin/Views/DichVu/Details.cshtml
+++ b/QLTT/QLTT/Areas/Admin/Views/DichVu/Details.cshtml
@@ -30,6 +30,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ma_dv }) |
+    @Html.ActionLink("EditService", "EditService", new { id = Model.ma_dv }) |
     @Html.ActionLink("Quay Lại", "Index")
 </p>
