--- a/QLTT/QLTT/Areas/Admin/Views/HoaDon/ConfirmPayment.cshtml
+++ b/QLTT/QLTT/Areas/Admin/Views/HoaDon/ConfirmPayment.cshtml
@@ -21,6 +21,6 @@
     {
         <div class="alert alert-danger" role="alert">Có lỗi !<br /></div>
     }
-    <a href="@Url.Action("ChiTietHoaDon","HoaDon",new { id = ViewBag.maHDTS })"><i class="fa fa-arrow-left" aria-hidden="true"></i> Quay lại hóa đơn</a> <b> | </b>
-    <a href='@Url.Action("Index","HoaDon")'><i class="fa fa-list-ul" aria-hidden="true"></i> Danh sách hóa đơn </a>
+    <a href="@Url.Action("DetailBill","Bill",new { id = ViewBag.maHDTS })"><i class="fa fa-arrow-left" aria-hidden="true"></i> Quay lại hóa đơn</a> <b> | </b>
+    <a href='@Url.Action("Index","Bill")'><i class="fa fa-list-ul" aria-hidden="true"></i> Danh sách hóa đơn </a>
 }
