--- a/QLTT/QLTT/Areas/Admin/Views/HoaDon/Index.cshtml
+++ b/QLTT/QLTT/Areas/Admin/Views/HoaDon/Index.cshtml
@@ -131,7 +131,7 @@
                             </td>
                             <td>
 
-                                @Html.ActionLink("Chi tiết", "ChiTietHoaDon", new { id = item.maHDTS })
+                                @Html.ActionLink("Chi tiết", "DetailBill", new { id = item.maHDTS })
                             </td>
 
 
