--- a/QLTT/QLTT/Areas/Admin/Views/HoaDon/ResultExtend.cshtml
+++ b/QLTT/QLTT/Areas/Admin/Views/HoaDon/ResultExtend.cshtml
@@ -21,6 +21,6 @@
     {
         <div class="alert alert-danger" role="alert">Có lỗi trong quá trình gia hạn sân ! @ViewBag.result</div>
     }
-    <a href="@Url.Action("ListPhongDangHoatDong","Index")">Quay Lại</a>
+    <a href="@Url.Action("ListOfActive","Index")">Quay Lại</a>
 }
 
