--- a/QLTT/QLTT/Areas/Admin/Views/KhachHang/Add.cshtml
+++ b/QLTT/QLTT/Areas/Admin/Views/KhachHang/Add.cshtml
@@ -74,5 +74,5 @@
         </div>
     }
 
-    <a href="/Admin/FindRoom" class="btn btn-default">Back</a>
+    <a href="/Admin/KhachHang/Index" class="btn btn-default">Back</a>
 </div>
