--- a/QLTT/QLTT/Areas/Admin/Views/PhieuDatSan/Edit.cshtml
+++ b/QLTT/QLTT/Areas/Admin/Views/PhieuDatSan/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model QLTT.Models.PhieuThueSan
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "EditService";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
