--- a/QLTT/QLTT/Views/Home/Contact.cshtml
+++ b/QLTT/QLTT/Views/Home/Contact.cshtml
@@ -158,7 +158,7 @@
     }
 
     input.star-1:checked ~ label.star:before {
-        cocolor: #fbff01;
+        color: #fbff01;
     }
 
     label.star:hover {
