--- a/QLTT/QLTT/Views/Home/Result.cshtml
+++ b/QLTT/QLTT/Views/Home/Result.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Result";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
@@ -22,7 +21,7 @@
             <div class="alert alert-danger" role="alert">Có lỗi trong quá trình thuê sân. Bạn có thể liên hệ nhân viên sân để giải quyết vấn đề !</div>
         }
     }
-    <a href="@Url.Action("Index","Home")">Quay lại</a> | <a href="@Url.Action("BookSan","Home")">Sân đã đặt</a>
+    <a href="@Url.Action("Index","Home")">Quay lại</a> | <a href="@Url.Action("Rent","Home")">Sân đã đặt</a>
     <br /><br />
 </div>
 
