--- a/QLTT/QLTT/Areas/Admin/Views/DichVu/Delete.cshtml
+++ b/QLTT/QLTT/Areas/Admin/Views/DichVu/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model QLTT.Models.DichVu
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "DeleteService";
     Layout = "~/Areas/Admin/Views/Shared/_LayoutAdmin.cshtml";
 }
 
