--- a/QLTT/QLTT/Areas/Admin/Views/HoaDon/CallService.cshtml
+++ b/QLTT/QLTT/Areas/Admin/Views/HoaDon/CallService.cshtml
@@ -68,7 +68,7 @@
                     <div class="modal fade" id="popup" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                         <div class="modal-dialog" role="document">
                             <div class="modal-content">
-                                @using (@Html.BeginForm("XacNhanGoiDichVu", "HoaDon"))
+                                @using (@Html.BeginForm("XacNhanGoiDichVu", "Bill"))
                                 {
                                     <div class="modal-header">
                                         <h5 class="modal-title" id="exampleModalLabel">Chọn số lượng</h5>
@@ -81,8 +81,6 @@
                                         @Html.TextBox("ma_dv", null, new { @class = "form-control", style = "display:none" })
                                         Số lượng
                                         @Html.TextBox("so_luong", 1, new { @class = "form-control", @type = "number", style = "width:50%" })
-
-
                                     </div>
                                     <div class="modal-footer">
                                         <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
@@ -159,7 +157,7 @@
 <div class="modal fade" id="modeledit" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            @using (@Html.BeginForm("SuaDichVu", "HoaDon"))
+            @using (@Html.BeginForm("EditService", "Bill"))
             {
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Chọn số lượng</h5>
@@ -186,7 +184,7 @@
 <div class="modal fade" id="modeldelete" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            @using (@Html.BeginForm("XoaDichVu", "HoaDon"))
+            @using (@Html.BeginForm("DeleteService", "Bill"))
             {
                 <div class="modal-header">
                     <h5 class="modal-title" id="exampleModalLabel">Bạn có thực sự muốn xóa</h5>
