--- a/QLTT/QLTT/Areas/Admin/Views/HoaDon/Extend.cshtml
+++ b/QLTT/QLTT/Areas/Admin/Views/HoaDon/Extend.cshtml
@@ -10,7 +10,7 @@
         <a href="@Url.Action("Index","Index")">Admin</a>
     </li>
     <li class="breadcrumb-item">
-        <a href="@Url.Action("ListPhongDangHoatDong","Admin")">Sân đang hoạt động</a>
+        <a href="@Url.Action("ListOfActive","Admin")">Sân đang hoạt động</a>
     </li>
     <li class="breadcrumb-item active">Gia hạn sân @Model.San.maSoSan</li>
 </ol>
@@ -19,7 +19,7 @@
         <i class="fa fa-table"></i> Gia Hạn Sân @Model.San.maSoSan
     </div>
     <div class="card-body">
-        @using (Html.BeginForm("ResultGiaHan", "HoaDon"))
+        @using (Html.BeginForm("ResultExtend", "Bill"))
         {
             if (ViewBag.dateMax != null)
             {
@@ -45,44 +45,7 @@
             </div>
         }
     </div>
-</div>
- var dateMax = new Date('@ViewBag.dateMax');
-if (dateE > dateMax) {
-            alert("Ngày thuê sân không được quá ngày @ViewBag.dateMax");
-            return false;
-            }
-            @*<script>
-                     function checkday() {
-                        var from = $("#NgayThue").val().split("/");
-                        var soGioThue = $("#soGioThue").val();
-
-                        var dateS = new Date(from[2], from[1] - 1, from[0]);
-                    var dateMax = new int(@ViewBag.dateMax);
-                        var now = new Date();
-                        now.setHours(0);
-                        now.setSeconds(0);
-                        now.setMinutes(0);
-                        now.setMilliseconds(0);
-
-                        if (dateS < now) {
-                            alert("Ngày thuê lớn hơn hoặc bằng ngày hiện tại !");
-                            return false;
-                        }
-                        if (soGioThue <= 0) {
-                            alert("Số giờ thuê phải lớn hơn 0 !");
-                            return false;
-                         }
-                         if (soGioThue) > dateMax) {
-                            alert("Ngày ra không được quá ngày @ViewBag.dateMax");
-                            return false;
-                            }
-                        if (from == "" || soGioThue == "") {
-                            alert("Ngày tháng và số giờ thuê không được để trống !");
-                            return false;
-                        }
-                        return true;
-                    }
-                </script>*@
+</div>          
             <script>
     function checkday() {
         var from1 = $("#NgayThue").val();
