--- a/QLTT/QLTT/Areas/Admin/Views/HoaDon/Pay.cshtml
+++ b/QLTT/QLTT/Areas/Admin/Views/HoaDon/Pay.cshtml
@@ -9,11 +9,11 @@
     <li class="breadcrumb-item">
         <a href="@Url.Action("Index","Index")">Admin</a>
     </li>
-    <li class="breadcrumb-item"><a href="@Url.Action("Index","HoaDon")">Hóa đơn</a></li>
-    <li class="breadcrumb-item active"><a href="@Url.Action("ChiTietHoaDon","HoaDon",new { id = Model.maHDTS})">@Html.DisplayFor(model => model.maHDTS)</a></li>
+    <li class="breadcrumb-item"><a href="@Url.Action("Index","Bill")">Hóa đơn</a></li>
+    <li class="breadcrumb-item active"><a href="@Url.Action("DetailsBill","Bill",new { id = Model.maHDTS })">@Html.DisplayFor(model => model.maHDTS)</a></li>
     <li class="breadcrumb-item active">Thanh toán</li>
 </ol>
-@using (Html.BeginForm("XacNhanThanhToan", "HoaDon"))
+@using (Html.BeginForm("ConfirmPayment", "Bill"))
 {
     @Html.AntiForgeryToken()
     <div class="card mb-3" id="hoadon">
@@ -37,11 +37,10 @@
                         catch
                         {
                         }
-
                         <table class="table table-bordered table-responsive table-striped" cellspacing="0">
                             <tr>
                                 <td>Nhân Viên</td>
-                                <td>@ViewBag.hotenNV</td>
+                                <td>@ViewBag.hoTenNV</td>
                             </tr>
                             <tr>
                                 <td>Khách hàng</td>
@@ -55,40 +54,9 @@
                                     <td>@Model.PhieuThueSan.KhachHang.hoTenKH</td>
                                 }
                             </tr>
-                            @*<tr>
-                                    <td>Khách đi cùng</td>
-                                    <td>
-                                        <table width="100%">
-                                            <thead>
-                                                <tr>
-                                                    <th>Họ tên</th>
-                                                    <th>Tuổi</th>
-                                                </tr>
-
-                                            </thead>
-                                            <tbody>
-                                                @{
-                                                    try {
-                                                        List<QLTT.Areas.Admin.Models.KhachHang> dskh = Newtonsoft.Json.JsonConvert.DeserializeObject<List<QLTT.Areas.Admin.Models.KhachHang>>(Model.tblPhieuDatPhong.thong_tin_khach_thue);
-                                                        for (var i = 1; i < dskh.Count; i++)
-                                                        {
-                                                        <tr>
-                                                    <td>@dskh[i].hoten</td>
-                                                    <td>@dskh[i].tuoi</td>
-                                                </tr>
-                                                        }
-                                                    }
-                                                    catch
-                                                    {
-
-                                                    }
-                                                    }
-                                            </tbody>
-                                        </table>
-                                    </td>
-                                </tr>*@
+                            
                             <tr>
-                                <td>Mã số sân</td>
+                                <td>Số sân</td>
                                 <td>@Model.PhieuThueSan.San.maSoSan</td>
                             </tr>
                             <tr>
@@ -122,29 +90,7 @@
                                     </table>
                                 </td>
                             </tr>
-                            @*<tr>*@
-                            @*<td>Phụ thu</td>
-                                <td>
-                                    <table width="100%">
-                                        <thead>
-                                            <tr>
-                                                <th>Giá phòng</th>
-                                                <th>Số ngày phụ thu</th>
-                                                <th>Tỉ lệ phụ thu</th>
-                                                <th>Thành tiền</th>
-                                            </tr>
-
-                                        </thead>
-                                        <tbody>
-                                            <tr>
-                                                <td>@Model.tblPhieuDatPhong.tblPhong.tblLoaiPhong.gia</td>
-                                                <td>@ViewBag.so_ngay_phu_thu</td>
-                                                <td>@Model.tblPhieuDatPhong.tblPhong.tblLoaiPhong.ti_le_phu_thu</td>
-                                                <td>@ViewBag.phu_thu</td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </td>*@
+                            <tr>
 
                         </table>
                     </div>
@@ -164,7 +110,6 @@
                                         <th>
                                             Giá
                                         </th>
-
                                         <th>
                                             Số lượng
                                         </th>
@@ -193,7 +138,7 @@
                                                 </td>
                                             </tr>
                                         }
-                                        <tr><td>Tổng:</td><td></td><td></td><td></td><td>@ViewBag.tiendichvu</td></tr>
+                                        <tr><td>Tổng:</td><td></td><td></td><td></td><td>@ViewBag.tienDichVu</td></tr>
                                     }
                                 </table>
 
@@ -202,8 +147,8 @@
                         </div>
 
                     </div>
-                    Công thức tính tiền sân:<br />
-                    Tổng tiền = Số giờ thuê x giá sân.
+                    Công thức tính tiền Sân:<br />
+                    Tổng tiền = số giờ thuê x giá sân.
                 </div>
 
 
@@ -212,7 +157,7 @@
             <div class="form-group">
                 @Html.Label("Tổng tiền", htmlAttributes: new { @class = "control-label col-md-8" })
                 <div class="col-md-10">
-                    @Html.TextBox("tongTien", ((int)ViewBag.tongTien).ToString("C"), new { @class = "form-control", @readonly = "readonly" })
+                    @Html.TextBox("tong_tien", ((int)ViewBag.tongTien).ToString("C"), new { @class = "form-control", @readonly = "readonly" })
                 </div>
             </div>
 
