--- a/QLTT/QLTT/Areas/Admin/Views/Index/ChooseRent.cshtml
+++ b/QLTT/QLTT/Areas/Admin/Views/Index/ChooseRent.cshtml
@@ -18,7 +18,7 @@
                 </div>
                 <div class="mr-5">Đã đặt sân online trước!</div>
             </div>
-            <a class="card-footer text-white clearfix small z-1" href="@Url.Action("List", "PhieuDatSan")">
+            <a class="card-footer text-white clearfix small z-1" href="@Url.Action("List", "VoteRent")">
                 <span class="float-left">Nhận sân</span>
                 <span class="float-right">
                     <i class="fa fa-angle-right"></i>
@@ -34,7 +34,7 @@
                 </div>
                 <div class="mr-5">Chưa đặt sân trước!</div>
             </div>
-            <a class="card-footer text-white clearfix small z-1" href="@Url.Action("FindSan", "Index")">
+            <a class="card-footer text-white clearfix small z-1" href="@Url.Action("Search", "Index")">
                 <span class="float-left">Đặt sân</span>
                 <span class="float-right">
                     <i class="fa fa-angle-right"></i>
