--- a/QLTT/QLTT/Areas/Admin/Views/Index/ListOfActive.cshtml
+++ b/QLTT/QLTT/Areas/Admin/Views/Index/ListOfActive.cshtml
@@ -56,9 +56,9 @@
                             <td>@item.PhieuThueSan.soGioThue</td>
                             <td><span class="badge badge-danger badge-g">@item.PhieuThueSan.San.TinhTrangSan.mota</span></td>
                             <td>
-                                <a href="@Url.Action("ThanhToan","HoaDon",new { id = item.maHDTS})"><div class="btn btn-danger badge-g">Trả Sân</div></a>
-                                <a href="@Url.Action("GiaHanSan","HoaDon",new { id = item.maHDTS})"><div class="btn btn-info badge-g">Gia Hạn</div></a>
-                                <a href="@Url.Action("DoiSan","HoaDon",new { id = item.maHDTS})"><div class="btn btn-secondary badge-g">Đổi sân</div></a>
+                                <a href="@Url.Action("Pay","Bill",new { id = item.maHDTS})"><div class="btn btn-danger badge-g">Trả Sân</div></a>
+                                <a href="@Url.Action("Extend","Bill",new { id = item.maHDTS})"><div class="btn btn-info badge-g">Gia Hạn</div></a>
+                                @*<a href="@Url.Action("DoiSan","HoaDon",new { id = item.maHDTS})"><div class="btn btn-secondary badge-g">Đổi sân</div></a>*@
                             </td>
                         </tr>
                     }
