--- a/QLTT/QLTT/Areas/Admin/Views/San/Edit.cshtml
+++ b/QLTT/QLTT/Areas/Admin/Views/San/Edit.cshtml
@@ -35,7 +35,7 @@
                     @Html.Label("Loại Sân", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.DropDownList("Loai_San", null, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.Loai_San, "", new { @class = "text-danger" })
+                        @Html.ValidationMessageFor(model => model.LoaiSan, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group">
