--- a/QLTT/QLTT/Views/Account/EditVoteRent.cshtml
+++ b/QLTT/QLTT/Views/Account/EditVoteRent.cshtml
@@ -56,7 +56,7 @@
                 @Html.Label("Số Sân", htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.DropDownList("maSoSan", null, htmlAttributes: new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.maSoSan, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.maSan, "", new { @class = "text-danger" })
                 </div>
             </div>
 
