--- a/QLTT/QLTT/Views/Account/Login.cshtml
+++ b/QLTT/QLTT/Views/Account/Login.cshtml
@@ -32,12 +32,12 @@
                     @Html.AntiForgeryToken()
                     @Html.ValidationSummary(true)
                     <div class="form-group">
-                        <label for="exampleInputEmail1"><h5>Tên Đăng Nhập</h5></label>
+                        <label for="exampleInputEmail1">Tên Đăng Nhập</label>
                         @Html.TextBoxFor(u => u.maKH, null, new { @class = "form-control" })
                         @Html.ValidationMessageFor(u => u.maKH)
                     </div>
                     <div class="form-group">
-                        <label for="exampleInputPassword1" values="margin-top:20px"><h5>Mật Khẩu</h5></label>
+                        <label for="exampleInputPassword1" values="margin-top:20px">Mật Khẩu</label>
                         @Html.PasswordFor(u => u.matKhau, new { @class = "form-control" })
                         @Html.ValidationMessageFor(u => u.matKhau)
                     </div>
@@ -46,12 +46,8 @@
 
                 }
                 <br />
-
-
             </div>
-
         </div>
-
     </div>
     <script src="~/Content/Admin/vendor/jquery/jquery.min.js"></script>
     <script src="~/Content/Admin/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
