--- a/QLTT/QLTT/Views/Home/Rent.cshtml
+++ b/QLTT/QLTT/Views/Home/Rent.cshtml
@@ -78,7 +78,7 @@
                                 <div class="form-group">
                                     <div class="col-md-offset-2 col-md-9">
                                         <input type="submit" value="Đặt" class="btn btn-success" />
-                                        <a href="@Url.Action("HuyPhieudatSan", "Home")"><span class="btn btn-default">Hủy</span></a>
+                                        <a href="@Url.Action("Cancel", "Home")"><span class="btn btn-default">Hủy</span></a>
                                     </div>
                                 </div>
                             </div>
@@ -141,7 +141,7 @@
                                         @Html.DisplayFor(modelItem => item.San.maSoSan)
                                     </td>
                                     <td>
-                                        <a class="nav-link" href="@Url.Action("XoaPhieuDatSan", "Account", new { id = item.maPT })">Hủy</a>
+                                        <a class="nav-link" href="@Url.Action("DeleteVoteRent", "Account", new { id = item.maPT })">Hủy</a>
                                        
                                     </td>
                                 </tr>
