--- a/QLTT/QLTT/Views/Home/Search.cshtml
+++ b/QLTT/QLTT/Views/Home/Search.cshtml
@@ -25,9 +25,7 @@
             <h3 class="panel-title"><i style='font-size:50px' class='fas'>&#xf002;</i> Tìm </h3>
         </div>
         <div class="panel-body">
-
-
-            @using (Html.BeginForm("FindSan", "Home"))
+            @using (Html.BeginForm("Search", "Home"))
             {
 
                 <div class="row form-group">
@@ -50,7 +48,7 @@
                     </div>
                     <div class="col-md-4">
                         <label for="soGioThue" style="visibility:hidden">OK</label>
-                        <a href="@Url.Action("BookSan","Home")" onclick="return checkChonSan()" class="btn btn-primary btn-block">Hoàn Tất</a>
+                        <a href="@Url.Action("Rent","Home")" onclick="return checkChonSan()" class="btn btn-primary btn-block">Hoàn Tất</a>
                     </div>
                 </div>
             }
@@ -66,9 +64,6 @@
                         <th>
                             Loại Sân
                         </th>
-                        @*<th>
-                            Khu Vực
-                        </th>*@
                         <th>
                             Giá
                         </th>
@@ -131,7 +126,7 @@
         var btn = $('#btn_' + id);
         if (btn.html() == "Chọn Sân") {
             $.ajax({
-                url: '/Home/ChonSan/' + id,
+                url: '/Home/ChooseInfrastructure/' + id,
                 type: 'GET',
                 contentType: 'application/x-www-form-urlencoded; charset=UTF-8',
                 success: function (data) {
@@ -143,7 +138,7 @@
             });
         } else {
             $.ajax({
-                url: '/Home/HuyChon/' + id,
+                url: '/Home/Cancel/' + id,
                 type: 'GET',
                 contentType: 'application/x-www-form-urlencoded; charset=UTF-8',
                 success: function (data) {
