--- a/QLTT/QLTT/Views/Home/Rent.cshtml
+++ b/QLTT/QLTT/Views/Home/Rent.cshtml
@@ -78,7 +78,7 @@
                                 <div class="form-group">
                                     <div class="col-md-offset-2 col-md-9">
                                         <input type="submit" value="Đặt" class="btn btn-success" />
-                                        <a href="@Url.Action("Cancel", "Home")"><span class="btn btn-default">Hủy</span></a>
+                                        <a href="@Url.Action("CancelVoteRent", "Home")"><span class="btn btn-default">Hủy</span></a>
                                     </div>
                                 </div>
                             </div>
