sua lat vat+ danh sach co so vat chat +database

--- a/QLTT/QLTT/Areas/Admin/Views/PhieuDatSan/List.cshtml
+++ b/QLTT/QLTT/Areas/Admin/Views/PhieuDatSan/List.cshtml
@@ -70,7 +70,7 @@
                             </td>
                             <td>
                               
-                                <a class="nav-link" href="@Url.Action("Add", "Bill", new { id = item.maPT })">Nhận Sân</a>
+                                <a class="nav-link" href="@Url.Action("Add", "HoaDon", new { id = item.maPT })">Nhận Sân</a>
                             </td>
                         </tr>
                     }
