--- a/QLTT/QLTT/Areas/Admin/Views/Index/Index.cshtml
+++ b/QLTT/QLTT/Areas/Admin/Views/Index/Index.cshtml
@@ -14,12 +14,12 @@
     <li class="breadcrumb-item active">Sân</li>
 </ol>
 @*<div class="container">
-    <div class="row">
-        <div class="col-md-4"><div class="alert alert-success">Có @ViewBag.soSantrong Sân đang trống</div></div>
-        <div class="col-md-4"><div class="alert alert-danger">Có @ViewBag.soSansd Sân đang được sử dụng</div></div>
-        <div class="col-md-4"><div class="alert alert-warning">Có @ViewBag.soSandon Sân đang dọn</div></div>
-    </div>
-</div>*@
+        <div class="row">
+            <div class="col-md-4"><div class="alert alert-success">Có @ViewBag.soSantrong Sân đang trống</div></div>
+            <div class="col-md-4"><div class="alert alert-danger">Có @ViewBag.soSansd Sân đang được sử dụng</div></div>
+            <div class="col-md-4"><div class="alert alert-warning">Có @ViewBag.soSandon Sân đang dọn</div></div>
+        </div>
+    </div>*@
 <div class="card mb-3">
     <div class="card-header">
         <i class="fa fa-table"></i> List Sân
@@ -34,7 +34,6 @@
 
                         <th>SS</th>
                         <th>Loại Sân</th>
-                        @*<th>Khu Vực</th>*@
                         <th>Ngày thuê</th>
                         <th>Số giờ thuê</th>
                         <th>Tình trạng</th>
@@ -46,7 +45,6 @@
 
                         <th>SS</th>
                         <th>Loại Sân</th>
-                        @*<th>Khu Vực</th>*@
                         <th>Ngày thuê</th>
                         <th>Số giờ thuê</th>
                         <th>Tình trạng</th>
@@ -58,13 +56,45 @@
                     {
 
                         <tr>
-
                             <td>@item.maSoSan</td>
-                            <td>@item.LoaiSan1.moTa</td>
-                            @*<td>@item.tblTang.ten_tang</td>*@
-                            <td>@item.LoaiSan1.giaThue / giờ</td>
+                            <td>
+                                @if (item.LoaiSan1 != null)
+                                {
+                                    @item.LoaiSan1.moTa
+                                    <br />
+                                    @String.Format("{0} / giờ", item.LoaiSan1.giaThue)
+                                }
+                                else
+                                {
+                                    @: Loại sân không xác định
+                                }
+                            </td>
+                            <td>
+                            @if (item.PhieuThueSans.Any())
+                            {
+                                var phieuThue = item.PhieuThueSans.First();
+                                @phieuThue.NgayThue 
+                               
+                               
+                            }
+                            else
+                            {
+                                @:Chưa thuê
+                            }
+                            </td>
+                            <td>
+                                @if (item.PhieuThueSans.Any())
+                                {
+                                    var phieuThue = item.PhieuThueSans.First();
+                                    @phieuThue.soGioThue
 
 
+                                }
+                                else
+                                {
+                                    @:Chưa thuê
+                                }
+                            </td>
                             @if (item.maTinhTrang == 1)
                             {
                                 <td><span class="badge badge-success badge-g">@item.TinhTrangSan.mota</span></td>
@@ -74,19 +104,19 @@
                             {
                                 <td><span class="badge badge-danger badge-g">@item.TinhTrangSan.mota</span></td>
                                 <td>
-                                    <a href="@Url.Action("FindHdById","Index",new { id = @item.maSan })"><div class="btn btn-danger badge-g">Trả sân</div></a>
-                                    <a href="@Url.Action("FindHdById2","Index",new { id = @item.maSan })" class="btn btn-primary"><span class="glyphicon glyphicon-plus"></span>Gọi dịch vụ</a>
+                                    <a href="@Url.Action("FindBill","Index",new { id = @item.maSan })"><div class="btn btn-danger badge-g">Trả sân</div></a>
+                                    <a href="@Url.Action("FindBill2","Index",new { id = @item.maSan })" class="btn btn-primary"><span class="glyphicon glyphicon-plus"></span>Gọi dịch vụ</a>
                                 </td>
                             }
                             else if (item.maTinhTrang == 3)
                             {
                                 <td><span class="badge badge-warning badge-g">@item.TinhTrangSan.mota</span></td>
-                                <td><a href="@Url.Action("DonSanXong","Index",new { id = @item.maSan })"><div class="btn btn-warning badge-g">Dọn xong</div></a></td>
+                                <td><a href="@Url.Action("CleanInfrastructure","Index",new { id = @item.maSan })"><div class="btn btn-warning badge-g">Dọn xong</div></a></td>
                             }
                             else
                             {
                                 <td><span class="badge badge-info badge-g">@item.TinhTrangSan.mota</span></td>
-                                <td><a href="@Url.Action("DonSanXong","Index",new { id = @item.maSan })"><div class="btn btn-info badge-g">Bảo trì xong</div></a></td>
+                                <td><a href="@Url.Action("CleanInfrastructure","Index",new { id = @item.maSan })"><div class="btn btn-info badge-g">Bảo trì xong</div></a></td>
                             }
                         </tr>
                     }
