--- a/QLTT/QLTT/Areas/Admin/Views/HoaDon/Extend.cshtml
+++ b/QLTT/QLTT/Areas/Admin/Views/HoaDon/Extend.cshtml
@@ -19,7 +19,7 @@
         <i class="fa fa-table"></i> Gia Hạn Sân @Model.San.maSoSan
     </div>
     <div class="card-body">
-        @using (Html.BeginForm("ResultExtend", "Bill"))
+        @using (Html.BeginForm("ResultExtend", "HoaDon"))
         {
             if (ViewBag.dateMax != null)
             {
