--- a/QLTT/QLTT/Areas/Admin/Views/Index/Search.cshtml
+++ b/QLTT/QLTT/Areas/Admin/Views/Index/Search.cshtml
@@ -16,7 +16,7 @@
             <h3 class="panel-title">Chọn ngày thuê</h3>
         </div>
         <div class="panel-body">
-            @using (Html.BeginForm("SelectInfrastructure", "VoteRent"))
+            @using (Html.BeginForm("SelectInfrastructure", "PhieuDatSan"))
             {
                 @Html.AntiForgeryToken()
                 <div class="row">
