--- a/QLTT/QLTT/Areas/Admin/Views/Index/ListOfServiceCalled.cshtml
+++ b/QLTT/QLTT/Areas/Admin/Views/Index/ListOfServiceCalled.cshtml
@@ -46,7 +46,7 @@
 
                         <tr>
                             <td>@item.PhieuThueSan.San.maSoSan</td>
-                            <td>@item.PhieuThueSan.San.LoaiSan1.moTa</td>
+                            <td>@item.PhieuThueSan.San.LoaiSan.moTa</td>
                             <td>@item.PhieuThueSan.NgayThue</td>
                             <td>@item.PhieuThueSan.soGioThue</td>
                             <td><span class="badge badge-danger badge-g">@item.PhieuThueSan.San.TinhTrangSan.mota</span></td>
