--- a/QLTT/QLTT/Areas/Admin/Views/San/Details.cshtml
+++ b/QLTT/QLTT/Areas/Admin/Views/San/Details.cshtml
@@ -19,11 +19,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.LoaiSan1.moTa)
+            @Html.DisplayNameFor(model => model.LoaiSan.moTa)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.LoaiSan1.moTa)
+            @Html.DisplayFor(model => model.LoaiSan.moTa)
         </dd>
 
         <dt>
