--- a/QLTT/QLTT/Areas/Admin/Views/Index/ListOfActive.cshtml
+++ b/QLTT/QLTT/Areas/Admin/Views/Index/ListOfActive.cshtml
@@ -48,14 +48,14 @@
 
                         <tr>
                             <td>@item.PhieuThueSan.San.maSoSan</td>
-                            <td>@item.PhieuThueSan.San.LoaiSan1.moTa</td>
+                            <td>@item.PhieuThueSan.San.LoaiSan.moTa</td>
                             <td>@item.PhieuThueSan.NgayThue.Value.ToShortDateString()</td>
                             <td>@item.PhieuThueSan.soGioThue</td>
                             <td><span class="badge badge-danger badge-g">@item.PhieuThueSan.San.TinhTrangSan.mota</span></td>
                             <td>
                                 <a href="@Url.Action("Pay","HoaDon",new { id = item.maHDTS})"><div class="btn btn-danger badge-g">Trả Sân</div></a>
                                 <a href="@Url.Action("Extend","HoaDon",new { id = item.maHDTS})"><div class="btn btn-info badge-g">Gia Hạn</div></a>
-                                <a href="@Url.Action("DoiSan","HoaDon",new { id = item.maHDTS})"><div class="btn btn-secondary badge-g">Đổi sân</div></a>
+                                <a href="@Url.Action("ChangeInfrastructure","HoaDon",new { id = item.maHDTS})"><div class="btn btn-secondary badge-g">Đổi sân</div></a>
                             </td>
                         </tr>
                     }
