--- a/QLTT/QLTT/Areas/Admin/Views/San/Index.cshtml
+++ b/QLTT/QLTT/Areas/Admin/Views/San/Index.cshtml
@@ -42,10 +42,10 @@
                         <tr>
                             <td>
                                 
-                                    @if (item.LoaiSan1 != null && !string.IsNullOrEmpty(item.LoaiSan1.anh))
+                                    @if (item.LoaiSan != null && !string.IsNullOrEmpty(item.LoaiSan.anh))
                                     {
                                         // Giả sử chuỗi anh là một đường dẫn hợp lệ và không phải là JSON
-                                        <img src="@Url.Content(item.LoaiSan1.anh)" height="120px" />
+                                        <img src="@Url.Content(item.LoaiSan.anh)" height="120px" />
                                     }
                                 
                             </td>
@@ -53,15 +53,15 @@
                                 @Html.DisplayFor(modelItem => item.maSoSan)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.LoaiSan1.moTa)
+                                @Html.DisplayFor(modelItem => item.LoaiSan.moTa)
                             </td>
                             @if (Session["NV"] != null && ((QLTT.Models.NhanVien)Session["NV"]).maCV <= 2)
-                            {
+                             {
                                 <td>
                                     @Html.ActionLink("Sửa", "edit", new { id = item.maSan }) |
                                     @Html.ActionLink("Xóa", "Delete", new { id = item.maSan })
                                 </td>
-                            }
+                             }
                         </tr>
                     }
                 </tbody>
