--- a/QLTT/QLTT/Areas/Admin/Views/San/Create.cshtml
+++ b/QLTT/QLTT/Areas/Admin/Views/San/Create.cshtml
@@ -33,7 +33,7 @@
                     @Html.Label("Loại sân", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         @Html.DropDownList("Loai_San", null, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.LoaiSan1, "", new { @class = "text-danger" })
+                        @Html.ValidationMessageFor(model => model.LoaiSan, "", new { @class = "text-danger" })
                     </div>
                 </div>
                 <div class="form-group hidden">
