--- a/QLTT/QLTT/Areas/Admin/Views/San/Delete.cshtml
+++ b/QLTT/QLTT/Areas/Admin/Views/San/Delete.cshtml
@@ -31,7 +31,7 @@
                 </dt>
 
                 <dd>
-                    @Html.DisplayFor(model => model.LoaiSan1.moTa)
+                    @Html.DisplayFor(model => model.LoaiSan.moTa)
                 </dd>
 
             </dl>
